--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
 
   <div class="logo">
-    <img src="assets/Logo-royal.jpeg" width="80" height="80" alt="هتل رویال">
+    <img src="Logo-royal.jpeg" width="80" height="80" alt="هتل رویال">
   </div>
 
 </header>
@@ -72,11 +72,11 @@
     </div>
 
     <div class="gallery-item">
-      <img src="assets/Labi.jpg" width="200" height="200" alt="لابی هتل">
+      <img src="Labi.jpg" width="200" height="200" alt="لابی هتل">
     </div>
 
     <div class="gallery-item">
-      <img src="assets/resturant.jpg"
+      <img src="resturant.jpg"
       width="300" height="300" alt="رستوران هتل">
     </div>
 
@@ -124,7 +124,7 @@
 
     <!-- اتاق یک‌تخته -->
     <div class="room-box">
-      <img src="assets/Single-room.jpg" width="300" height="300" alt="اتاق یک‌تخته">
+      <img src="Single-room.jpg" width="300" height="300" alt="اتاق یک‌تخته">
 
       <h3>اتاق یک‌تخته</h3>
       <p>مناسب برای اقامت‌های کوتاه و اقتصادی با امکانات کامل.</p>
@@ -134,7 +134,7 @@
 
     <!-- اتاق دوتخته -->
     <div class="room-box">
-      <img src="assets/Double-room.jpg" width="300" height="300" alt="اتاق دوتخته">
+      <img src="Double-room.jpg" width="300" height="300" alt="اتاق دوتخته">
 
       <h3>اتاق دوتخته</h3>
       <p>فضای بزرگ‌تر، تخت راحت و مناسب زوج‌ها یا دوستان.</p>
