Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <section id="hero" class="hero">
   <div class="hero-content">
+      <img src="Royal hotel.jpg" alt="هتل رویال">
     <h1>هتل رویال</h1>
     <p>اقامتی آرام، لوکس و فراموش‌نشدنی در قلب شهر</p>
     <button id="open-rooms-modal" class="hero-btn">مشاهده اتاق‌ها و سوئیت‌ها</button>
@@ -41,25 +42,25 @@
   <div class="features-container">
 
     <div class="feature-box"> 
-    <img src="Images/Wi-fi.jpg" width="300" height="300" alt="  وای فای هتل">
+    <img src="Wi-fi.jpg" width="300" height="300" alt="  وای فای هتل">
       <h3>وای‌فای رایگان</h3>
       <p>اینترنت پرسرعت در تمام اتاق‌ها و لابی</p>
     </div>
 
     <div class="feature-box">
-      <img src="Images/resturan.jpg" width="300" height="300" alt="رستوان "
+      <img src="resturan.jpg" width="300" height="300" alt="رستوان "
       <h3>رستوران اختصاصی</h3>
       <p>منوی متنوع با غذاهای ایرانی و بین‌المللی</p>
     </div>
 
     <div class="feature-box">
-       <img src="Images/stakhr.jpg" width="300" height="300"alt="استخر هتل">
+       <img src="stakhr.jpg" width="300" height="300"alt="استخر هتل">
       <h3>استخر و سونا</h3>
       <p>محیطی آرام برای استراحت و ریلکس کردن</p>
     </div>
 
     <div class="feature-box">
-      <span class="icon">🅿️</span>
+      <img src="parking hotel.jpg" width="300" height="300" alt="پارکینگ هنل">
       <h3>پارکینگ رایگان</h3>
       <p>پارکینگ امن و ۲۴ ساعته برای مهمانان</p>
     </div>
@@ -69,22 +70,22 @@
   <div class="gallery-container">
 
     <div class="gallery-item">
-      <img src="https://images.unsplash.com/photo-1631049307268-da0ec9e2b8d6?auto=format&fit=crop&w=800&q=80" alt="Image 1">
+      <img src="Double-room.jpg" width="300" height="300" alt="اتاق دوتخته">
     </div>
 
     <div class="gallery-item">
-      <img src="Images/Labi.jpg" width="200" height="200" alt="لابی هتل">
+      <img src="Labi.jpg" width="200" height="200" alt="لابی هتل">
     </div>
 
     <div class="gallery-item">
-      <img src="Images/resturant.jpg"
+      <img src="resturant.jpg"
       width="300" height="300" alt="رستوران هتل">
     </div>
 
     <div class="gallery-item">
-      <img src="https://images.unsplash.com/photo-1562792828-88d60e5a1c8e?auto=format&fit=crop&w=800&q=80" alt="Image 2">
+      <img src="Stakhr hotel.jpg" width="300" height="300" alt="استخر هتل">
     </div>
-    
+
     </div>
     </section>
 
@@ -184,7 +185,7 @@
 
       <!-- اتاق یک‌تخته -->
       <div class="modal-room-card">
-        <img src="Images/Single-room.jpg" width="300" height="300" alt="اتاق یک تخته">
+        <img src="Single-room.jpg" width="300" height="300" alt="اتاق یک تخته">
         <h3>اتاق یک‌تخته</h3>
         <p>اتاقی دنج و مدرن با تخت تک‌نفره راحت، حمام اختصاصی، میز کار و چشم‌انداز شهر.</p>
         <span class="modal-price">از ۸۵۰,۰۰۰ تومان</span>
@@ -193,7 +194,7 @@
 
       <!-- اتاق دوتخته -->
       <div class="modal-room-card">
-        <img src="Images/double-room.jpg" width="300" height="300" alt="اتاق دو تخته">
+        <img src="double-room.jpg" width="300" height="300" alt="اتاق دو تخته">
         <h3>اتاق دوتخته</h3>
         <p>فضای وسیع با تخت کینگ یا دو تخت جدا، بالکن خصوصی و امکانات کامل رفاهی.</p>
         <span class="modal-price">از ۱,۲۰۰,۰۰۰ تومان</span>
@@ -202,7 +203,7 @@
 
       <!-- سوئیت لوکس -->
       <div class="modal-room-card">
-        <img src="Images/Lux-suit.jpg" width="300" height="300" alt="سوئیت لوکس">
+        <img src="Lux-suit.jpg" width="300" height="300" alt="سوئیت لوکس">
         <h3>سوئیت لوکس</h3>
         <p>سوئیت بزرگ با نشیمن جداگانه، جکوزی و چشم‌انداز پانوراما.</p>
         <span class="modal-price">از ۲,۵۰۰,۰۰۰ تومان</span>
@@ -211,7 +212,7 @@
 
       <!-- سوئیت VIP -->
       <div class="modal-room-card">
-          <img src="Images/Vip suit.jpg" width="300" height="300" alt="سوئیتvip>"
+          <img src="Vip suit.jpg" width="300" height="300" alt="سوئیتvip>"
         <h3>سوئیت VIP</h3>
         <p>بالاترین سطح لوکس با سالن پذیرایی، سرویس اختصاصی ۲۴ ساعته و طراحی مجلل.</p>
         <span class="modal-price">از ۴,۸۰۰,۰۰۰ تومان</span>
