--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <section id="hero" class="hero">
   <div class="hero-content">
-      <img src="Royal hotel.jpg" alt="هتل رویال">
+      <img src="Royal hotel.jpg" width="300" height="300" alt="هتل رویال">
     <h1>هتل رویال</h1>
     <p>اقامتی آرام، لوکس و فراموش‌نشدنی در قلب شهر</p>
     <button id="open-rooms-modal" class="hero-btn">مشاهده اتاق‌ها و سوئیت‌ها</button>
@@ -42,25 +42,25 @@
   <div class="features-container">
 
     <div class="feature-box"> 
-    <img src="Wi-fi.jpg" width="300" height="300" alt="  وای فای هتل">
+    <img src="Wi-fi.jpg" alt="وای فای هتل" class="model-room-img">
       <h3>وای‌فای رایگان</h3>
       <p>اینترنت پرسرعت در تمام اتاق‌ها و لابی</p>
     </div>
 
     <div class="feature-box">
-      <img src="resturan.jpg" width="300" height="300" alt="رستوان "
+      <img src="resturan.jpg" alt="رستوان" class="model-room-img">
       <h3>رستوران اختصاصی</h3>
       <p>منوی متنوع با غذاهای ایرانی و بین‌المللی</p>
     </div>
 
     <div class="feature-box">
-       <img src="stakhr.jpg" width="300" height="300"alt="استخر هتل">
+       <img src="stakhr.jpg" alt="استخر هتل" class="model-room-img">
       <h3>استخر و سونا</h3>
       <p>محیطی آرام برای استراحت و ریلکس کردن</p>
     </div>
 
     <div class="feature-box">
-      <img src="parking hotel.jpg" width="300" height="300" alt="پارکینگ هنل">
+      <img src="parking hotel.jpg" alt="پارکینگ هتل" class="model-room-img">
       <h3>پارکینگ رایگان</h3>
       <p>پارکینگ امن و ۲۴ ساعته برای مهمانان</p>
     </div>
@@ -70,20 +70,19 @@
   <div class="gallery-container">
 
     <div class="gallery-item">
-      <img src="Double-room.jpg" width="300" height="300" alt="اتاق دوتخته">
+      <img src="Double-room.jpg" alt="اتاق دوتخته" class="model-room-img">
     </div>
 
     <div class="gallery-item">
-      <img src="Labi.jpg" width="200" height="200" alt="لابی هتل">
+      <img src="Labi.jpg" alt="لابی هتل" class="model-room-img">
     </div>
 
     <div class="gallery-item">
-      <img src="resturant.jpg"
-      width="300" height="300" alt="رستوران هتل">
+      <img src="resturant.jpg" alt="رستوران هتل" class="model-room-img">
     </div>
 
     <div class="gallery-item">
-      <img src="Stakhr hotel.jpg" width="300" height="300" alt="استخر هتل">
+      <img src="Stakhr hotel.jpg" alt="استخر هتل" class="model-room-img">
     </div>
 
     </div>
@@ -174,7 +173,7 @@
   </div>
 
 </footer>
-
+      
 <!-- مودال اتاق‌ها -->
 <div id="rooms-modal" class="modal">
   <div class="modal-content">
@@ -185,7 +184,7 @@
 
       <!-- اتاق یک‌تخته -->
       <div class="modal-room-card">
-        <img src="Single-room.jpg" width="300" height="300" alt="اتاق یک تخته">
+        <img src="Single-room.jpg" alt="اتاق یک تخته" class="model-room-img">
         <h3>اتاق یک‌تخته</h3>
         <p>اتاقی دنج و مدرن با تخت تک‌نفره راحت، حمام اختصاصی، میز کار و چشم‌انداز شهر.</p>
         <span class="modal-price">از ۸۵۰,۰۰۰ تومان</span>
@@ -194,7 +193,7 @@
 
       <!-- اتاق دوتخته -->
       <div class="modal-room-card">
-        <img src="double-room.jpg" width="300" height="300" alt="اتاق دو تخته">
+        <img src="double-room.jpg" alt="اتاق دو تخته" class="model-room-img">
         <h3>اتاق دوتخته</h3>
         <p>فضای وسیع با تخت کینگ یا دو تخت جدا، بالکن خصوصی و امکانات کامل رفاهی.</p>
         <span class="modal-price">از ۱,۲۰۰,۰۰۰ تومان</span>
@@ -203,7 +202,7 @@
 
       <!-- سوئیت لوکس -->
       <div class="modal-room-card">
-        <img src="Lux-suit.jpg" width="300" height="300" alt="سوئیت لوکس">
+        <img src="Lux-suit.jpg" alt="سوئیت لوکس" class="model-room-img">
         <h3>سوئیت لوکس</h3>
         <p>سوئیت بزرگ با نشیمن جداگانه، جکوزی و چشم‌انداز پانوراما.</p>
         <span class="modal-price">از ۲,۵۰۰,۰۰۰ تومان</span>
@@ -212,7 +211,7 @@
 
       <!-- سوئیت VIP -->
       <div class="modal-room-card">
-          <img src="Vip suit.jpg" width="300" height="300" alt="سوئیتvip>"
+          <img src="Vip suit.jpg" alt="سوئیتvip" class="model-room-img">
         <h3>سوئیت VIP</h3>
         <p>بالاترین سطح لوکس با سالن پذیرایی، سرویس اختصاصی ۲۴ ساعته و طراحی مجلل.</p>
         <span class="modal-price">از ۴,۸۰۰,۰۰۰ تومان</span>
