Fix img tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="features-container">
 
     <div class="feature-box"> 
-    <img src="Wi-fi.jpg" alt="وای فای هتل" class="model-room-img">
+    <img src="Wi-fi.jpg" alt="وای فای هتل">
       <h3>وای‌فای رایگان</h3>
       <p>اینترنت پرسرعت در تمام اتاق‌ها و لابی</p>
     </div>
