--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <section id="hero" class="hero">
   <div class="hero-content">
-      <img src="Royal hotel.jpg" width="300" height="300" alt="هتل رویال">
+      <img src="Royal hotel.jpg" alt="هتل رویال" class="model-room-img">
     <h1>هتل رویال</h1>
     <p>اقامتی آرام، لوکس و فراموش‌نشدنی در قلب شهر</p>
     <button id="open-rooms-modal" class="hero-btn">مشاهده اتاق‌ها و سوئیت‌ها</button>
@@ -42,7 +42,7 @@
   <div class="features-container">
 
     <div class="feature-box"> 
-    <img src="Wi-fi.jpg" alt="وای فای هتل">
+    <img src="Wi-fi.jpg" alt="وای فای هتل" class="model-room-img">
       <h3>وای‌فای رایگان</h3>
       <p>اینترنت پرسرعت در تمام اتاق‌ها و لابی</p>
     </div>
