--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
   <div class="features-container">
 
     <div class="feature-box"> 
-    <img src="Wi-fi.jpg" alt="وای فای هتل" class="model-room-img">
+    <img src="Wi-fi.jpg" alt="وای فای هتل" class="modl-room-img">
       <h3>وای‌فای رایگان</h3>
       <p>اینترنت پرسرعت در تمام اتاق‌ها و لابی</p>
     </div>
 
     <div class="feature-box">
-      <img src="resturan.jpg" alt="رستوان" class="model-room-img">
+      <img src="resturan.jpg" alt="رستوان" class="modal-room-img">
       <h3>رستوران اختصاصی</h3>
       <p>منوی متنوع با غذاهای ایرانی و بین‌المللی</p>
     </div>
 
     <div class="feature-box">
-       <img src="stakhr.jpg" alt="استخر هتل" class="model-room-img">
+       <img src="stakhr.jpg" alt="استخر هتل" class="modal-room-img">
       <h3>استخر و سونا</h3>
       <p>محیطی آرام برای استراحت و ریلکس کردن</p>
     </div>
 
     <div class="feature-box">
-      <img src="parking hotel.jpg" alt="پارکینگ هتل" class="model-room-img">
+      <img src="parking hotel.jpg" alt="پارکینگ هتل" class="modal-room-img">
       <h3>پارکینگ رایگان</h3>
       <p>پارکینگ امن و ۲۴ ساعته برای مهمانان</p>
     </div>
@@ -70,19 +70,19 @@
   <div class="gallery-container">
 
     <div class="gallery-item">
-      <img src="Double-room.jpg" alt="اتاق دوتخته" class="model-room-img">
+      <img src="Double-room.jpg" alt="اتاق دوتخته" class="modal-room-img">
     </div>
 
     <div class="gallery-item">
-      <img src="Labi.jpg" alt="لابی هتل" class="model-room-img">
+      <img src="Labi.jpg" alt="لابی هتل" class="modal-room-img">
     </div>
 
     <div class="gallery-item">
-      <img src="resturant.jpg" alt="رستوران هتل" class="model-room-img">
+      <img src="resturant.jpg" alt="رستوران هتل" class="modal-room-img">
     </div>
 
     <div class="gallery-item">
-      <img src="Stakhr hotel.jpg" alt="استخر هتل" class="model-room-img">
+      <img src="Stakhr hotel.jpg" alt="استخر هتل" class="modal-room-img">
     </div>
 
     </div>
@@ -184,7 +184,7 @@
 
       <!-- اتاق یک‌تخته -->
       <div class="modal-room-card">
-        <img src="Single-room.jpg" alt="اتاق یک تخته" class="model-room-img">
+        <img src="Single-room.jpg" alt="اتاق یک تخته" class="modal-room-img">
         <h3>اتاق یک‌تخته</h3>
         <p>اتاقی دنج و مدرن با تخت تک‌نفره راحت، حمام اختصاصی، میز کار و چشم‌انداز شهر.</p>
         <span class="modal-price">از ۸۵۰,۰۰۰ تومان</span>
@@ -193,7 +193,7 @@
 
       <!-- اتاق دوتخته -->
       <div class="modal-room-card">
-        <img src="double-room.jpg" alt="اتاق دو تخته" class="model-room-img">
+        <img src="double-room.jpg" alt="اتاق دو تخته" class="modal-room-img">
         <h3>اتاق دوتخته</h3>
         <p>فضای وسیع با تخت کینگ یا دو تخت جدا، بالکن خصوصی و امکانات کامل رفاهی.</p>
         <span class="modal-price">از ۱,۲۰۰,۰۰۰ تومان</span>
@@ -202,7 +202,7 @@
 
       <!-- سوئیت لوکس -->
       <div class="modal-room-card">
-        <img src="Lux-suit.jpg" alt="سوئیت لوکس" class="model-room-img">
+        <img src="Lux-suit.jpg" alt="سوئیت لوکس" class="modal-room-img">
         <h3>سوئیت لوکس</h3>
         <p>سوئیت بزرگ با نشیمن جداگانه، جکوزی و چشم‌انداز پانوراما.</p>
         <span class="modal-price">از ۲,۵۰۰,۰۰۰ تومان</span>
@@ -211,7 +211,7 @@
 
       <!-- سوئیت VIP -->
       <div class="modal-room-card">
-          <img src="Vip suit.jpg" alt="سوئیتvip" class="model-room-img">
+          <img src="Vip suit.jpg" alt="سوئیتvip" class="modal-room-img">
         <h3>سوئیت VIP</h3>
         <p>بالاترین سطح لوکس با سالن پذیرایی، سرویس اختصاصی ۲۴ ساعته و طراحی مجلل.</p>
         <span class="modal-price">از ۴,۸۰۰,۰۰۰ تومان</span>
