--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
 
       <!-- سوئیت VIP -->
       <div class="modal-room-card">
-          <img src="Vip suit.jpg" width="300" height="300" alt="سوئیتvip>"
+          <img src="Vip suit.jpg" width="300" height="300" alt="سوئیتvip">
+            
         <h3>سوئیت VIP</h3>
         <p>بالاترین سطح لوکس با سالن پذیرایی، سرویس اختصاصی ۲۴ ساعته و طراحی مجلل.</p>
         <span class="modal-price">از ۴,۸۰۰,۰۰۰ تومان</span>
