--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>هتل رویال</title>
     <link rel="stylesheet" href="Style.css">
-    <script src="script.js"></script>
+    <script src=Script.js"></script>
 </head>
 <body>
 
@@ -222,7 +222,7 @@
 
   </div>
 </div>
-<script src="script.js"></script>
+<script src="Script.js"></script>
 </body>
 </html>
 
